--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
   <head>
     <title>simple-html-and-css</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
 
     <section>
       <header>
         <h1>Simple HTML and CSS - Experiment 1</h1>
-        <a href="#wolf1">I am an anchor link to the first wolf image.</a>
+        <a href="#wolf1">
+          I am an anchor link to the first wolf image.
+        </a>
       </header>
     </section>
 
@@ -23,7 +25,7 @@
         <li>
           <h2>I am a list item too.</h2>
           <p>I have a wolf image!</p>
-          <img id="wolf1" src="images/wolf.jpg" alt="A wolf." />
+          <img id="wolf1" class="whatever" src="images/wolf.jpg" alt="A wolf." />
         </li>
         <li>I am a list item</li>
         <li>I am a list item</li>
