initial goal for week-2

--- a/week-2/index-positioning.html
+++ b/week-2/index-positioning.html
@@ -2,19 +2,15 @@
 <html lang="en">
   <head>
     <title>simple-html-and-css</title>
-    <link rel="stylesheet" type="text/css" href="css/float-styles.css">
-
-    <!-- "Magic Viewport" -->
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-    
+    <link rel="stylesheet" type="text/css" href="css/position-styles.css">
   </head>
   <body>
 
     <section>
       <header>
-        <h1>Simple HTML and CSS - Experiment 2 - Float layout</h1>
+        <h1>Simple HTML and CSS - Experiment 2 - Position layout</h1>
         <p>
-          This layout is done using CSS floats. See <a href="./index-positioning.html">the same layout using CSS  positioning</a>.
+          This layout is done using CSS positioning. See <a href="./index.html">the same layout using CSS floats</a>.
         </p>
       </header>
     </section>
