--- a/week-2/index-positioning.html
+++ b/week-2/index-positioning.html
@@ -21,18 +21,20 @@
         <li>I am a list item</li>
         <li>I am a list item</li>
         <li>I am a list item</li>
-        <li>I am a list item</li>
-        <li class="side a">
-          <h2>I am a list item too.</h2>
-          <p>I have a wolf image!</p>
-          <img id="wolf1" class="whatever" src="images/wolf.jpg" alt="A wolf." />
+        <li class="side-wrapper">
+          <ul>
+            <li class="side a">
+              <h2>I am a list item too.</h2>
+              <p>I have a wolf image!</p>
+              <img id="wolf1" class="whatever" src="images/wolf.jpg" alt="A wolf." />
+            </li>
+            <li class="side b">
+              <h2>I am a list item too.</h2>
+              <p>I have a wolf image!</p>
+              <img id="wolf2" src="images/wolf.jpg" alt="A wolf." />
+            </li>
+          </ul>
         </li>
-        <li class="side b">
-          <h2>I am a list item too.</h2>
-          <p>I have a wolf image!</p>
-          <img id="wolf2" src="images/wolf.jpg" alt="A wolf." />
-        </li>
-        <li>I am a list item</li>
         <li>I am a list item</li>
         <li>I am a list item</li>
         <li>I am a list item</li>
