--- a/week-2/index.html
+++ b/week-2/index.html
@@ -35,7 +35,7 @@
           <p>I have a wolf image!</p>
           <img id="wolf2" src="images/wolf.jpg" alt="A wolf." />
         </li>
-        <li>I am a list item</li>
+        <li class="clearfix">I am a list item</li>
         <li>I am a list item</li>
         <li>I am a list item</li>
         <li>I am a list item</li>
