Week 3 Updates by Will

--- a/week-3/index.html
+++ b/week-3/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <title>simple-html-and-css</title>
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+
 
     <!-- "Magic Viewport" -->
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
   </head>
   <body>
@@ -13,10 +16,10 @@
     <section>
       <nav class="inline-list-fixed">
         <ul>
-          <li><a href="">home</a></li>
-          <li><a href="">work</a></li>
-          <li><a href="">github</a></li>
-          <li><a href="">contact</a></li>
+          <li class="inline-list-item"><a href="">home</a></li>
+          <li class="inline-list-item"><a href="">work</a></li>
+          <li class="inline-list-item"><a href="">github</a></li>
+          <li class="inline-list-item"><a href="">contact</a></li>
         <ul>
       </nav>
       <header class="hero">
@@ -31,7 +34,7 @@
 
     <section id="main" class="main-content">
       <p>
-        Bacon ipsum dolor amet doner hamburger leberkas shankle pork loin filet mignon brisket landjaeger short loin ball tip meatloaf chicken. T-bone leberkas tail bresaola shoulder. Biltong pork sirloin, beef ribs pork chop pastrami kielbasa frankfurter jerky flank landjaeger. Tail cupim picanha, pancetta ground round turducken pork belly shank ball tip spare ribs doner biltong rump chuck porchetta. Ham fatback short ribs, sausage shankle tongue picanha beef ribs kielbasa biltong short loin filet mignon. Pork loin meatball shankle, pork belly kevin rump jowl chuck. Biltong brisket beef ribs pork.
+        Bacon ipsum dolor <a href="">amet doner</a> hamburger leberkas shankle pork loin filet mignon brisket landjaeger short loin ball tip meatloaf chicken. T-bone leberkas tail bresaola shoulder. Biltong pork sirloin, beef ribs pork chop pastrami kielbasa frankfurter jerky flank landjaeger. Tail cupim picanha, pancetta ground round turducken pork belly shank ball tip spare ribs doner biltong rump chuck porchetta. Ham fatback short ribs, sausage shankle tongue picanha beef ribs kielbasa biltong short loin filet mignon. Pork loin meatball shankle, pork belly kevin rump jowl chuck. Biltong brisket beef ribs pork.
       </p>
       <blockquote class="bq">
         Fatback landjaeger strip steak, prosciutto spare ribs chuck porchetta tail kevin short loin turkey hamburger. Landjaeger tenderloin andouille jowl pig. Filet mignon ball tip pork tri-tip capicola, rump sirloin. Turkey strip steak venison, beef salami sausage tri-tip pig brisket kielbasa landjaeger pork sirloin boudin ribeye.
